--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -62,6 +62,10 @@
   display: none;
 }
 
+.logoText .lastName {
+  color: var(--brand);
+}
+
 @media (min-width: 640px) {
   .logoText {
     display: inline;
