--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -142,16 +142,7 @@
   border: 1px solid rgba(34, 197, 94, 0.2);
 }
 
-.submitButton:disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
-  transform: none;
-}
-
-.submitButton:disabled:hover {
-  transform: none;
-  box-shadow: none;
-}
+/* Submit button styles removed - use Button component instead */
 
 /* Screen reader only class */
 .sr-only {
