--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -128,45 +128,41 @@
 .hamburger {
   position: relative;
   width: 24px;
-  height: 24px;
+  height: 18px;
 }
 
 .bar {
   position: absolute;
-  width: 2px;
-  height: 16px;
+  width: 24px;
+  height: 2px;
   background-color: var(--text);
   border-radius: 1px;
-  transition: transform 0.2s ease, opacity 0.2s ease;
+  transition: all 0.3s ease;
 }
 
-.bar.left {
-  left: 4px;
-  top: 4px;
+.bar:nth-child(1) {
+  top: 0;
 }
 
-.bar.mid {
-  left: 11px;
-  top: 4px;
+.bar:nth-child(2) {
+  top: 8px;
 }
 
-.bar.right {
-  right: 4px;
-  top: 4px;
+.bar:nth-child(3) {
+  top: 16px;
 }
 
-/* Open state (T) */
-.mobileMenuButton[aria-expanded="true"] .bar.mid {
-  transform: translateX(0) scaleY(1); /* vertical stem */
+/* Open state (X) */
+.mobileMenuButton[aria-expanded="true"] .bar:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
 }
 
-.mobileMenuButton[aria-expanded="true"] .bar.left {
-  transform: translate(0, -6px) rotate(90deg); /* horizontal cap */
-}
-
-.mobileMenuButton[aria-expanded="true"] .bar.right {
+.mobileMenuButton[aria-expanded="true"] .bar:nth-child(2) {
   opacity: 0;
-  transform: scaleY(0.2); /* hidden */
+}
+
+.mobileMenuButton[aria-expanded="true"] .bar:nth-child(3) {
+  transform: rotate(-45deg) translate(7px, -6px);
 }
 
 .mobileNav {
@@ -240,26 +236,20 @@
   
   .hamburger {
     width: 20px;
-    height: 20px;
+    height: 16px;
   }
   
   .bar {
-    height: 14px;
+    width: 20px;
+    height: 2px;
   }
   
-  .bar.left {
-    left: 3px;
-    top: 3px;
+  .bar:nth-child(2) {
+    top: 7px;
   }
   
-  .bar.mid {
-    left: 9px;
-    top: 3px;
-  }
-  
-  .bar.right {
-    right: 3px;
-    top: 3px;
+  .bar:nth-child(3) {
+    top: 14px;
   }
 }
 
